# tree-sitter-asm

./: .gitattributes  CMakeLists.txt  Cargo.toml  LICENSE  Makefile  README.md  binding.gyp  build.zig  build.zig.zon  go.mod  grammar.js  package.json  pom.xml  pyproject.toml  tree-sitter.json
.github/: FUNDING.yml
.github/workflows/: ts_tests.yml  typos.yml
bindings/go/: binding.go  binding_test.go
bindings/java/main/io/github/treesitter/jtreesitter/asm/: TreeSitterAsm.java
bindings/java/test/: TreeSitterAsmTest.java
bindings/node/: binding.cc  index.d.ts  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_asm/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/zig/: root.zig  test.zig
queries/asm/: highlights.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: instr_and_reg.test  labels_directives.test  macro.test
