[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-asm"
description = "assembly grammar for tree-sitter"
version = "0.24.0"
keywords = ["incremental", "parsing", "tree-sitter", "asm"]
classifiers = [
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed",
]
authors = [
  { name = "RubixDev" },
  { name = "Tymothé BILLEREY", email = "tymothe_billerey@fastmail.fr" },
]
requires-python = ">=3.9"
license.text = "MIT"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/Neptunium931/tree-sitter-asm"

[project.optional-dependencies]
core = ["tree-sitter~=0.22"]

[tool.cibuildwheel]
build = "cp39-*"
build-frontend = "build"
